--- a/style.css
+++ b/style.css
@@ -147,6 +147,12 @@ model-viewer {
     align-items: center;
 }
 
+.examples {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 
 
